statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: k8s-microproject-statefulset
spec:
  serviceName: k8s-microproject-service
  replicas: 3
  selector:
    matchLabels:
      app: k8s-microproject
  template:
    metadata:
      labels:
        app: k8s-microproject
    spec:
      containers:
      - name: k8s-microproject-container
        image: yacine69/k8s-microproject
        ports:
        - containerPort: 3000
          name: http
        volumeMounts:
        - name: logs-volume
          mountPath: /app/logs
        livenessProbe:
          httpGet:
            path: /
            port: 3000
  volumeClaimTemplates:
  - metadata:
      name: logs-volume
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
